docs: fix DEPLOYMENT.md env vars and DOCKER_README image path
- DEPLOYMENT.md: Replace incorrect env var names (POSTGRES_HOST/DB/USER ->
  DB_HOST/DB_NAME/DB_USERNAME), remove non-existent JWT_SECRET and
  API_RATE_LIMIT, update docker compose syntax (v2), fix git URL,
  fix docker run example with correct SPRING_DATASOURCE_* vars,
  add /api/health endpoint, remove duplicate zh-CN link
- DOCKER_README.md: Fix image path to match docker-compose.yml
  (ghcr.io/blueforce-tech-inc/bluecortexce/cortex-ce)